Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.15 - unreleased

	Tom Collins
	- Add 'compile' script to distribution.
	- If warn() isn't available, use fprintf() instead.

5.4.14 - released 17-Jan-06

	Tom Collins
	- vmysql.c: Increase buffer size in vauth_adduser() and use 
	  correct size when calling snprintf.
	- Backport most of 5.5.1, including code required for vpopmaild.
	- Allow --enable-valias option for Postgres backend (incorrectly
	  disabled in 5.4.13).
	- Only check a domain's disk usage when a quota is set. [1396238]

	Bill Shupp
	- vpopmaild: store quota in proper format and update maildirsize 
	  on quota change.

	Gaetan Minet
	- Remove lock file in open_smtp_relay() even if update_rules() fails.

	Rick Morris
	- vdelivermail.c: Fix problem where "# delete" in .qmail file was
	  being ignored. [1360346]

	Robin Bowes
	- Add vpopmaild (the vpopmail daemon) from 5.5 development series.

5.4.13 - released 16-Sep-05

	Riccardo Bini
	- vdelivermail.c: Use DOMAINS_DIR instead of hard-coded "domains".

	Jory A. Pratt
	- Compile libvpopmail with -fPIC option so amd64 users can compile
	  courier-authlib against libvpopmail.a.

	Tom Collins
	- hmac_md5.c: include <strings.h> for bzero and bcopy declarations.
	- configure.in: fix checks to limit enable-valias to MySQL only.
	- INSTALL: make clear that valias only applies to MySQL backend.
	- vpopmail.c: modify get_remote_ip() to work with xinetd, not
	  just tcpserver from daemontools.

5.4.12 - released 4-Jul-05

	Tom Collins
	- vdelivermail: read full message, even on catchall delete/bounce
	  to avoid SIGPIPE error if maildrop is calling vdelivermail.
	- vdelivermail: missing declaration when QMAIL_EXT defined.
	- vpopmail.h: remove declaration of crypt() and use #include 
	  crypt.h instead (if present).
	- configure: remove enable-domainquotas option until the domain
	  quota code is fixed.